# databricks-sdk-demo

./: README.md  pyproject.toml
notebooks/: connect.ipynb  workspace.ipynb
