[tool.poetry]
name = "databricks-sdk-demo"
version = "0.1.0"
description = ""
authors = ["Scott McKean <scott.mckean@databricks.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
databricks-sdk = "^0.29.0"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
databricks-connect = "~14.3"
setuptools = "^72.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
